<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/gradient_bk"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="16dp"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/username"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="24"
            app:counterTextColor="@color/white"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/pass_TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintVertical_bias="0.72">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_in_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/field_bk"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="@string/emailhint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#6A6A67" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            app:counterMaxLength="8"
            app:counterTextColor="@color/white"
            app:hintEnabled="false"
            app:passwordToggleTint="#800000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:background="@drawable/field_bk"
                android:textColor="@color/black"
                android:textColorHint="#6A6A67"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_TextInputLayout"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/get_in_bk"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login"
            app:layout_constraintVertical_bias="0.576" />

        <TextView
            android:id="@+id/Forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_passsword"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <LinearLayout
            android:id="@+id/or_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:weightSum="3"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/imges_layout"

            app:layout_constraintTop_toBottomOf="@id/Forget_pass">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_weight="1"
                 android:background="@color/white"
                  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:text="@string/or"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/white"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/imges_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/or_layout"
            tools:layout_editor_absoluteX="20dp">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/linkedin" />

            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imges_layout"
            app:layout_constraintVertical_bias="0.060000002">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/need_an_account"
                android:textColor="@color/white"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/signup_in_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/signup"
                android:textColor="#ff8080"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>